Made major changes to layout n content. Ready for image and video insertions

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 
 <head>
     <meta charset="UTF-8">
@@ -31,8 +31,8 @@
 
     <header id="about" class="hero-section d-flex align-items-center" style="min-height: 80vh; background: #f8f9fa;">
         <div class="container text-center">
-            <h1 class="display-3 fw-bold fade-in">Hi, I'm Joshua.</h1>
-            <p class="lead fade-in-delayed">I’m an IT student specializing in building user-facing web features and
+            <h1 class="display-3 fw-bold fade-in">Hi, I'm Joshua!</h1>
+            <p class="lead fade-in-delayed">I’m an IT student specialising in building user-facing web features and
                 immersive game experiences.</p>
             <div class="mt-4 fade-in-delayed">
                 <a href="#projects" class="btn btn-primary btn-lg px-4 me-md-2">View My Work</a>
@@ -50,29 +50,33 @@
                             <div class="p-4 bg-dark text-white rounded shadow">
                                 <h5 class="text-primary fw-bold">Current State</h5>
                                 <p class="small">Polytechnic Student focusing on Software Engineering, AI, and
-                                    Collaborative Development.</p>
+                                    collaborative development.</p>
                                 <hr class="bg-light">
                                 <h5 class="text-primary fw-bold">The Goal</h5>
-                                <p class="small mb-0">Aspiring SUTD Undergraduate & Full-Stack Developer.</p>
+                                <p class="small mb-0">Aspiring SUTD undergraduate and Full-Stack Developer.</p>
                             </div>
                         </div>
                         <div class="col-md-8">
-                            <p class="lead fw-bold text-primary">From Player to Creator.</p>
+                            <p class="lead fw-bold text-primary">From player to creator</p>
                             <p>My journey into tech started with a simple goal: I wanted to create games that others
-                                could enjoy. While I hit roadblocks early on, a school program using
-                                <strong>Scratch</strong> reignited my passion, leading me to take programming as a
-                                subject in Secondary 3 and get an A for my O levels.
+                                could actually enjoy. I hit some roadblocks early on and almost gave up, but a school
+                                programme using <strong>Scratch</strong> reignited my passion. That led me to take
+                                programming in Secondary 3, where I eventually bagged an A for my O Levels.
                             </p>
 
-                            <p>I spent my early years self-teaching <strong>Python, HTML/CSS, JavaScript, and
-                                    Java</strong>. This foundation allowed me to return to Roblox Studio with a new
-                                perspective—mastering <strong>Luau</strong> to build successful, experience-driven games
-                                rather than just following tutorials.</p>
+                            <p>Before returning to game development, I spent time teaching myself the fundamentals of
+                                <strong>Python</strong>, <strong>HTML/CSS</strong>, <strong>JavaScript</strong>, and
+                                <strong>Java</strong>. Building this solid foundation was the "missing piece" I
+                                needed—it
+                                allowed me to finally head back to Roblox Studio with a proper understanding of how
+                                code actually works. I moved past copy-pasting and mastered <strong>Luau</strong>
+                                to build successful, experience-driven games from scratch.
+                            </p>
 
-                            <p>Today, I’ve shifted my focus toward <strong>Software Engineering and AI</strong>. I've
-                                moved from solo projects to team-based hackathons and industry-standard workflows. I am
-                                constantly learning, with my sights set on <strong>SUTD</strong> to further refine my
-                                craft.</p>
+                            <p>Today, my focus is on <strong>Software Engineering</strong> and <strong>AI</strong>. I've
+                                traded solo projects for team-based hackathons and industry-standard workflows. I’m
+                                always learning something new, with my sights firmly set on <strong>SUTD</strong> to
+                                keep refining my craft.</p>
                         </div>
                     </div>
                 </div>
@@ -88,24 +92,38 @@
                 <div class="card project-card-full shadow-sm border-0 overflow-hidden">
                     <div class="row g-0">
                         <div class="col-lg-6">
-                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Web App">
+                            <div id="carouselProject1" class="carousel slide h-100" data-bs-ride="false">
+                                <div class="carousel-inner h-100">
+                                    <div class="carousel-item active h-100">
+                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Dashboard View">
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="System Architecture">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject1"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselProject1"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                </button>
+                            </div>
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Full-Stack Data Management Ecosystem</h3>
-                            <p class="text-muted mb-2"><strong>Role: </strong>Lead Developer & Project Coordinator</p>
-                            <p>Spearheaded a team of 4 to architect a comprehensive full-stack application. Engineered a
-                                <strong>Python Flask</strong> backend integrated with <strong>SQLite</strong> and a
-                                custom Discord bot to automate multi-platform file categorization. Focused on
-                                implementing asynchronous API endpoints and scalable database architecture to ensure
-                                seamless data flow.</p>
+                            <p class="text-muted mb-2"><strong>Role</strong>: Lead Developer & Project Coordinator</p>
+                            <p>I spearheaded a team of four to build a comprehensive full-stack application. I
+                                engineered a Python Flask backend integrated with SQLite and built a custom Discord bot
+                                to automate multi-platform file categorisation.</p>
 
                             <div class="tag-container mt-auto pt-3">
                                 <span class="mini-tag">Python (Flask)</span>
                                 <span class="mini-tag">SQLite</span>
                                 <span class="mini-tag">REST APIs</span>
-                                <span class="mini-tag">JavaScript</span>
-                                <span class="mini-tag">Team Leadership</span>
                             </div>
                         </div>
                     </div>
@@ -118,20 +136,36 @@
                 <div class="card project-card-full shadow-sm border-0 overflow-hidden">
                     <div class="row g-0">
                         <div class="col-lg-6">
-                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Discord Bot">
+                            <div id="carouselProject2" class="carousel slide h-100" data-bs-ride="false">
+                                <div class="carousel-inner h-100">
+                                    <div class="carousel-item active h-100">
+                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Bot Command Output">
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Server Insights">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                </button>
+                            </div>
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Community Automation & Moderation Bot</h3>
-                            <p class="text-muted mb-2"><strong>Role: </strong>Backend Developer</p>
-                            <p>Developed and deployed a robust Discord automation tool serving a community of over
-                                <strong>1,000 active members</strong>. Implemented automated moderation logic and
-                                real-time user engagement features. Utilized <strong>Continuous Deployment (CD)</strong>
-                                workflows to ensure 99.9% uptime and rapid feature iteration.</p>
+                            <p class="text-muted mb-2"><strong>Role</strong>: Backend Developer</p>
+                            <p>I developed a robust Discord tool for a community of over 1,000 active members. I used
+                                Continuous Deployment (CD) workflows to maintain 99.9% uptime while pushing out new
+                                features.</p>
 
                             <div class="tag-container mt-auto pt-3">
                                 <span class="mini-tag">Python</span>
-                                <span class="mini-tag">Discord API</span>
                                 <span class="mini-tag">CI/CD</span>
                                 <span class="mini-tag">Automation</span>
                             </div>
@@ -146,20 +180,37 @@
                 <div class="card project-card-full shadow-sm border-0 overflow-hidden">
                     <div class="row g-0">
                         <div class="col-lg-6">
-                            <img src="Assets/Placeholder.jpg" class="img-fluid h-100 w-100 object-fit-cover"
-                                alt="Roblox Game">
+                            <div id="carouselProject3" class="carousel slide h-100" data-bs-ride="false">
+                                <div class="carousel-inner h-100">
+                                    <div class="carousel-item active h-100">
+                                        <video autoplay muted loop playsinline
+                                            class="d-block w-100 h-100 object-fit-cover">
+                                            <source src="Assets/RobloxGameplay.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="UI Framework">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject3"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselProject3"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                </button>
+                            </div>
                         </div>
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Immersive 3D Multiplayer Experience</h3>
-                            <p class="text-muted mb-2"><strong>Role: </strong>Lead Game Developer</p>
-                            <p>Designed and programmed a multiplayer 3D environment using the <strong>Roblox Studio
-                                    Engine</strong> and <strong>Luau</strong>. Engineered complex gameplay systems
-                                involving 3D spatial math and custom UI frameworks. Focused on game balancing and
-                                post-launch optimization to maintain high user retention and performance.</p>
+                            <p class="text-muted mb-2"><strong>Role</strong>: Lead Game Developer</p>
+                            <p>I designed a multiplayer environment using Roblox Studio and Luau. I engineered gameplay
+                                systems involving 3D spatial math and custom UI frameworks from scratch.</p>
 
                             <div class="tag-container mt-auto pt-3">
                                 <span class="mini-tag">Luau</span>
-                                <span class="mini-tag">Roblox Studio</span>
                                 <span class="mini-tag">3D Math</span>
                                 <span class="mini-tag">UI/UX Design</span>
                             </div>
@@ -169,12 +220,15 @@
             </div>
         </div>
     </section>
+
     <footer id="contact" class="bg-light py-5 border-top" style="padding-bottom: 300px !important;">
         <div class="container text-center">
             <h3>Thanks for stopping by!</h3>
-            <p class="text-muted">Feel free to reach out if you'd like to collaborate or just have chat.</p>
+            <p class="text-muted">Feel free to reach out if you'd like to collaborate or just have a chat.</p>
             <p class="fw-bold"><a href="mailto:joshuaooiky@gmail.com">joshuaooiky@gmail.com</a></p>
-            <p class="fw-bold"><a href="https://sg.linkedin.com/in/joshua-ooi-891086394">LinkedIn Profile</a></p>
+            <p class="fw-bold"><a href="https://sg.linkedin.com/in/joshua-ooi-891086394" target="_blank">LinkedIn
+                    Profile</a></p>
+            <p class="fw-bold"><a href="https://github.com/notJ0sh" target="_blank">GitHub Profile</a></p>
             <p class="mt-4 small text-secondary">&copy; 2026 Joshua Ooi</p>
         </div>
     </footer>
