minor text changes

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Full-Stack Data Management Ecosystem</h3>
                             <p class="text-muted mb-2"><strong>Role</strong>: Lead Developer & Project Coordinator</p>
-                            <p>I spearheaded a team of four to build a comprehensive full-stack application. I
-                                engineered a Python Flask backend integrated with SQLite and built a custom Discord bot
-                                to automate multi-platform file categorisation.</p>
+                            <p>I spearheaded a team of four to build a <strong>comprehensive full-stack application</strong>. I
+                                engineered a <strong>Python Flask</strong> backend integrated with <strong>SQLite</strong> and built a custom Discord bot
+                                to <strong>automate multi-platform</strong> file categorisation.</p>
 
                             <div class="tag-container mt-auto pt-3">
                                 <span class="mini-tag">Python (Flask)</span>
@@ -160,8 +160,8 @@
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Community Automation & Moderation Bot</h3>
                             <p class="text-muted mb-2"><strong>Role</strong>: Backend Developer</p>
-                            <p>I developed a robust Discord tool for a community of over 1,000 active members. I used
-                                Continuous Deployment (CD) workflows to maintain 99.9% uptime while pushing out new
+                            <p>I developed a robust <strong>Discord</strong> tool for a community of over <strong>1,000 active</strong> members. I used
+                                <strong>Continuous Deployment (CD)</strong> workflows to maintain <strong>99.9% uptime</strong> while pushing out new
                                 features.</p>
 
                             <div class="tag-container mt-auto pt-3">
@@ -206,8 +206,8 @@
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Immersive 3D Multiplayer Experience</h3>
                             <p class="text-muted mb-2"><strong>Role</strong>: Lead Game Developer</p>
-                            <p>I designed a multiplayer environment using Roblox Studio and Luau. I engineered gameplay
-                                systems involving 3D spatial math and custom UI frameworks from scratch.</p>
+                            <p>I designed a multiplayer environment using <strong>Roblox Studio</strong> and <strong>Luau</strong>. I engineered gameplay
+                                systems involving <strong>3D spatial math</strong> and <strong>custom UI frameworks</strong> from scratch.</p>
 
                             <div class="tag-container mt-auto pt-3">
                                 <span class="mini-tag">Luau</span>
