--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
                             <div id="carouselProject1" class="carousel slide h-100" data-bs-ride="false">
                                 <div class="carousel-inner h-100">
                                     <div class="carousel-item active h-100">
-                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
+                                        <img src="Assets/Projects/WebApp/WebApp_Dashboard.png" class="d-block w-100 h-100 object-fit-cover"
                                             alt="Dashboard View">
                                     </div>
                                     <div class="carousel-item h-100">
-                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
-                                            alt="System Architecture">
+                                        <img src="Assets/Projects/WebApp/WebApp_Apppy.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="App.py Code Snippet">
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <img src="Assets/Projects/WebApp/WebApp_Database.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Database Architecture">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject1"
@@ -139,12 +143,16 @@
                             <div id="carouselProject2" class="carousel slide h-100" data-bs-ride="false">
                                 <div class="carousel-inner h-100">
                                     <div class="carousel-item active h-100">
-                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
-                                            alt="Bot Command Output">
+                                        <img src="Assets/Projects/DiscordBot/DiscordBot_BotInfo.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Bot Information">
                                     </div>
                                     <div class="carousel-item h-100">
-                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
-                                            alt="Server Insights">
+                                        <img src="Assets/Projects/DiscordBot/DiscordBot_RenderLogs.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Render Logs">
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <img src="Assets/Projects/DiscordBot/DiscordBot_ServerInfo.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Server Information">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2"
@@ -160,7 +168,7 @@
                         <div class="col-lg-6 p-4 d-flex flex-column justify-content-center">
                             <h3 class="fw-bold">Community Automation & Moderation Bot</h3>
                             <p class="text-muted mb-2"><strong>Role</strong>: Backend Developer</p>
-                            <p>I developed a robust <strong>Discord</strong> tool for a community of over <strong>1,000 active</strong> members. I used
+                            <p>I developed a robust <strong>Discord</strong> tool for a community of over <strong>1000 active</strong> members. I used
                                 <strong>Continuous Deployment (CD)</strong> workflows to maintain <strong>99.9% uptime</strong> while pushing out new
                                 features.</p>
 
@@ -185,12 +193,16 @@
                                     <div class="carousel-item active h-100">
                                         <video autoplay muted loop playsinline
                                             class="d-block w-100 h-100 object-fit-cover">
-                                            <source src="Assets/RobloxGameplay.mp4" type="video/mp4">
+                                            <source src="Assets/Projects/RobloxGame/RobloxStudio_Showcase.mp4" type="video/mp4">
                                         </video>
                                     </div>
                                     <div class="carousel-item h-100">
-                                        <img src="Assets/Placeholder.jpg" class="d-block w-100 h-100 object-fit-cover"
-                                            alt="UI Framework">
+                                        <img src="Assets/Projects/RobloxGame/RobloxGame_PlayerCombatSystem.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="Player Combat System">
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <img src="Assets/Projects/RobloxGame/RobloxGame_HitboxDetection.png" class="d-block w-100 h-100 object-fit-cover"
+                                            alt="HitBox System">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject3"
